# pegasus

./: .buildinfo  .gitignore  .gitmodules  Jenkinsfile  LICENSE  README.md  docker.sh  genindex.html  index.html  install_requirements.sh  objects.inv  requirements.txt  search.html  searchindex.js
_sources/: index.rst.txt
pegasus/: CMakeLists.txt  package.xml
pegasus/config/: consensus.yaml  iris.yaml  iris_vision.params  kopis.yaml  pegasus.yaml  realsense_d435i.yaml  snapdragon5.yaml  snapdragon6.yaml
pegasus/config/real/: kopis.yaml  pegasus.yaml  snapdragon6.yaml
pegasus/config/simulation/: pegasus.yaml  x500.yaml
pegasus/launch/bag/: bumblebee_playback.launch.py
pegasus/launch/dev/: realsense.launch.py
pegasus/launch/gz_simulation/: iris_sim.launch.py  pegasus_sim.launch.py  pegasus_sim_dds.launch.py  x500_sim.launch.py
pegasus/launch/real/: intel_aero.launch.py  kopis.launch.py  pegasus.launch.py  pegasus_esp.launch.py  realsense.launch.py  snapdragon5.launch.py  snapdragon6.launch.py
pegasus/launch/simulation/: iris.launch.py  iris_sim.launch.py  pegasus.launch.py  pegasus_sim.launch.py  pegasus_sim_dds.launch.py  x500_sim.launch.py  xrce_iris.launch.py
pegasus_addons/paths/: CMakeLists.txt  package.xml
pegasus_addons/paths/src/: arc.cpp  circle.cpp  lemniscate.cpp  line.cpp  path.cpp  section.cpp
pegasus_addons/pegasus_utils/: CMakeLists.txt  package.xml
pegasus_autopilot/autopilot/: CMakeLists.txt  package.xml
pegasus_autopilot/autopilot/config/: autopilot.yaml
pegasus_autopilot/autopilot/launch/: autopilot.launch.py
pegasus_autopilot/autopilot/src/: autopilot.cpp  main.cpp
pegasus_autopilot/autopilot_common/: CMakeLists.txt  package.xml
pegasus_autopilot/autopilot_controllers/: CMakeLists.txt  autopilot_controller_plugins.xml  package.xml
pegasus_autopilot/autopilot_controllers/src/: mellinger_controller.cpp  onboard_controller.cpp  pid.cpp  pid_controller.cpp  px4_controller.cpp
pegasus_autopilot/autopilot_modes/: CMakeLists.txt  autopilot_mode_plugins.xml  package.xml  plugins.xml
pegasus_autopilot/autopilot_modes/include/: mode.hpp  mode_follow_trajectory.hpp  mode_hold.hpp  mode_land.hpp  mode_pass_trough.hpp  mode_takeoff.hpp  mode_waypoint.hpp
pegasus_autopilot/autopilot_modes/src/: mode_arm.cpp  mode_consensus.cpp  mode_disarm.cpp  mode_follow_trajectory.cpp  mode_hold.cpp  mode_land.cpp  mode_manual.cpp  mode_onboard_land.cpp  mode_pass_through.cpp  mode_smooth_waypoint.cpp  mode_takeoff.cpp  mode_waypoint.cpp
pegasus_autopilot/static_trajectories/: CMakeLists.txt  package.xml  static_trajectory_manager_plugins.xml
pegasus_autopilot/static_trajectories/src/: arc.cpp  circle.cpp  csv.cpp  lemniscate.cpp  line.cpp
pegasus_autopilot/static_trajectory_manager/: CMakeLists.txt  autopilot_trajectory_manager_plugins.xml  package.xml
pegasus_autopilot/static_trajectory_manager/src/: static_trajectory_manager.cpp
pegasus_bringup/: CMakeLists.txt  package.xml  setup.py
pegasus_bringup/config/: intel_aero.yaml  iris.yaml  kopis.yaml  pegasus.yaml  realsense_d435i.yaml  snapdragon.yaml  snapdragon5.yaml  topics.yaml
pegasus_bringup/launch/bag/: bumblebee_playback.launch.py
pegasus_bringup/launch/dev/: realsense.launch.py
pegasus_bringup/launch/real/: bumblebee.launch.py  intel_aero.launch.py  kopis.launch.py  pegasus.launch.py  pegasus_esp.launch.py  snapdragon.launch.py  snapdragon5.launch.py  snapdragon6.launch.py
pegasus_bringup/launch/simulation/: iris.launch.py
pegasus_console/: CMakeLists.txt  package.xml
pegasus_console/config/: console_config.yaml
pegasus_console/include/pegasus_console/: console_node.hpp  console_ui.hpp  vehicle_status.hpp
pegasus_console/launch/: pegasus_console.launch.py
pegasus_console/src/: console_node.cpp  console_ui.cpp  main.cpp
pegasus_demos/: package.xml  setup.cfg  setup.py
pegasus_demos/pegasus_demos/: demo.py  demo2.py  land.py
pegasus_drivers/mavlink_driver/: CMakeLists.txt  package.xml
pegasus_drivers/mavlink_driver/config/: rates.yaml  topics.yaml
pegasus_drivers/mavlink_driver/launch/: mavlink_driver.launch.py
pegasus_drivers/mavlink_driver/src/: main.cpp  mavlink_node.cpp  ros_node.cpp
pegasus_drivers/mavlink_interface/: CMakeLists.txt  package.xml
pegasus_drivers/mavlink_interface/config/: topics.yaml
pegasus_drivers/mavlink_interface/launch/: mavlink_interface.launch.py
pegasus_drivers/mavlink_interface/src/: aux.cpp  driver.cpp  mavlink_node.cpp
pegasus_drivers/ueye_driver/: package.xml  setup.cfg  setup.py
pegasus_drivers/ueye_driver/config/: camera_params.ini  topics.yaml
pegasus_drivers/ueye_driver/ueye_driver/: ueye_driver_node.py
pegasus_drivers/vrpn_client_ros/: CMakeLists.txt  README.md  package.xml
pegasus_drivers/vrpn_client_ros/config/: alameda.yaml  tagus.yaml
pegasus_drivers/vrpn_client_ros/launch/: vrpn.launch.py
pegasus_drivers/vrpn_client_ros/src/: vrpn_client_node.cpp
pegasus_estimator/estimator_manager/: CMakeLists.txt  package.xml
pegasus_estimator/estimator_manager/config/: estimator_manager.yaml
pegasus_estimator/estimator_manager/launch/: estimator_manager.launch.py
pegasus_interfaces/mavlink_interface/: CMakeLists.txt  package.xml
pegasus_interfaces/mocap_emulator/: CMakeLists.txt  package.xml
pegasus_interfaces/mocap_interface/: CMakeLists.txt  package.xml
pegasus_manager/: CMakeLists.txt  package.xml
pegasus_manager/launch/: pegasus_manager.launch.py
pegasus_manager/src/: lifecycle_service_client.cpp  main.cpp  manager_node.cpp
pegasus_msgs/: CMakeLists.txt  package.xml
pegasus_msgs/action/: VehicleArm.action  VehicleLand.action  VehicleTakeOff.action
pegasus_msgs/msg/: ActuatorControl.msg  AttitudeRateThrustControl.msg  AttitudeThrustControl.msg  Health.msg  PositionControl.msg  RPY.msg  Status.msg
pegasus_msgs/srv/: ArmVehicle.srv  ThrustCurve.srv
pegasus_paths/: CMakeLists.txt  package.xml
pegasus_paths/config/: topics.yaml
pegasus_paths/launch/: pegasus_paths.launch.py
pegasus_paths/src/: main.cpp  mpc.cpp  onboard_controller.cpp  paths_node.cpp  pid_controller.cpp
(+405 files in other folders)
