<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pegasus</name>
  <version>1.0.0</version>
  <description>Package that launches the entire system</description>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>Non-Commercial and Non-Military BSD4 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Utilitary packages -->
  <exec_depend>pegasus_utils</exec_depend>
  <exec_depend>pid</exec_depend>
  <exec_depend>thrust_curves</exec_depend>

  <!-- The Autopilot packages -->
  <exec_depend>autopilot</exec_depend>
  <exec_depend>autopilot_controllers</exec_depend>
  <exec_depend>autopilot_modes</exec_depend>
  <exec_depend>box_geofencing</exec_depend>
  <exec_depend>static_trajectories</exec_depend>
  <exec_depend>static_trajectory_manager</exec_depend>

  <!-- Pegasus console - Terminal UI to do basic vehicle operations -->
  <exec_depend>pegasus_console</exec_depend>

  <!-- Interfaces for mavlink, mocap and such -->
  <exec_depend>mavlink_interface</exec_depend>
  <exec_depend>mocap_interface</exec_depend>

  <!-- Custom messages used by all the packages -->
  <exec_depend>pegasus_msgs</exec_depend>

  <!-- Packages Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>