<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pegasus_demos</name>
  <version>1.0.0</version>
  <description>Demos</description>
  <maintainer email="mjacinto@isr.tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>pegasus_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>